<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.SellerLoginActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/appLogo"
        app:shapeAppearanceOverlay="@style/curved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/logoName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:gravity="center"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/logo_color"
            android:textStyle="bold" />

    </com.google.android.material.card.MaterialCardView>

    <!--Email-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sellerEmailTilSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appLogo"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/sellerEmailEtSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />


    </com.google.android.material.textfield.TextInputLayout>

    <!--    Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sellerPassTilSignIn"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sellerEmailTilSignIn"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <EditText
            android:id="@+id/sellerPassEtSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Button-->
    <Button
        android:id="@+id/sellerLoginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sellerPassTilSignIn"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/logo_color"
        android:text="Login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/noSellerAccountTv"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:text="@string/noAccount" />

</RelativeLayout>