<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".activities.SellerRegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/appLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="20dp"
                app:shapeAppearanceOverlay="@style/curved">

                <ImageView
                    android:id="@+id/imgLogo"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/app_logo"
                    android:src="@drawable/logo" />

                <TextView
                    android:id="@+id/logoName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="140dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/logo_color"
                    android:textStyle="bold" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userNameTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/appLogo"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/userNameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Username"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/shopNameTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/userNameTil"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/shopNameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/shopName"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bioTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/shopNameTil"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/bioET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bio"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/bioTil"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailTil"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/passwordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textVisiblePassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordTil"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/logo_color"
                android:text="@string/btnRegister"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>