<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="10dp"
    tools:context=".activities.StartActivity">

    <LinearLayout
        android:id="@+id/logoLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            app:shapeAppearanceOverlay="@style/curved"
            app:strokeColor="@color/transparent"
            app:strokeWidth="2dp">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/app_logo"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/logoName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="140dp"
                android:gravity="center"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/logo_color"
                android:textStyle="bold" />

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/loginLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/btnUserLogin"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/logo_color"
                android:drawableLeft="@drawable/user_icon"
                android:drawableTint="@color/white"
                android:text="@string/customerLogin"
                android:textAllCaps="false"
                android:textColor="@color/white"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/btnSellerLogin"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/logo_color"
                android:drawableLeft="@drawable/seller_icon"
                android:drawableTint="@color/white"
                android:text="@string/sellerLogin"
                android:textAllCaps="false"
                android:textColor="@color/white"
                tools:ignore="RtlHardcoded" />


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>