<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".activities.UserLoginActivity">


    <TextView
        android:id="@+id/titleLabelTv"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="Customer Login" />

    <TextView
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleLabelTv"
        android:layout_centerHorizontal="true"
        android:text="Login to your Customer Account" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/appLogo"
        app:shapeAppearanceOverlay="@style/curved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/logoName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:gravity="center"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/logo_color"
            android:textStyle="bold" />

    </com.google.android.material.card.MaterialCardView>

    <!--    Email-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/customerEmailTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/appLogo">

        <EditText
            android:id="@+id/customerEmailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailAddress" />


    </com.google.android.material.textfield.TextInputLayout>

    <!--    Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/customerPassTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/customerEmailTil"
        android:layout_centerInParent="true"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/customerPassEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Button-->
    <Button
        android:id="@+id/customerLoginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/customerPassTil"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/logo_color"
        android:text="Login"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/noCustomerAccountTv"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:text="@string/noAccount" />
</RelativeLayout>